# rust-gpu

./: Cargo.toml
.cargo/: config
.github/workflows/: test.sh
crates/rustc_codegen_spirv/src/: abi.rs
crates/spirv-builder/src/test/: arch.rs  basic.rs  mod.rs
crates/spirv-std/src/: arch.rs  float.rs  image.rs  integer.rs  lib.rs  scalar.rs
crates/spirv-std/src/arch/: arithmetic.rs
crates/spirv-std/src/image/: params.rs
tests/: Cargo.toml  lib.rs
tests/ui/: allocate_const_scalar_pointer.rs  allocate_null_pointer.rs  allocate_vec_like_pointer.rs  create_unitialized_memory.rs  hello_world.rs  mat3_vec3_multiply.rs  panic.rs  panic_builtin.rs  panic_builtin_bounds_check.rs  push_constant.rs  push_constant_vulkan.rs  signum.rs
tests/ui/arch/: all.rs  any.rs  vector_extract_dynamic.rs  vector_insert_dynamic.rs
tests/ui/image/: read.rs  write.rs
tests/ui/lang/: asm_const_arg.rs  logical_and.rs
tests/ui/lang/control-flow/: defer.rs  if.rs  if_else.rs  if_else_if_else.rs  if_if.rs  if_return_else.rs  if_return_else_return.rs  if_while.rs  ifx2.rs  issue_283.rs  loop.rs  while.rs  while_break.rs  while_continue.rs  while_if_break.rs  while_if_break_else_break.rs  while_if_break_if_break.rs  while_if_continue.rs  while_if_continue_else_continue.rs  while_return.rs  while_while.rs  while_while_break.rs  while_while_continue.rs  while_while_if_break.rs  while_while_if_continue.rs
