[package]
name = "compiletest-suite"
version = "0.0.0"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[lib]
path = "./lib.rs"

[dependencies]
compiletest = { version = "0.6.0", package = "compiletest_rs" }
rustc_codegen_spirv = { path = "../crates/rustc_codegen_spirv" }
